# Water-Reminder

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: copilot-instructions.md  dependabot.yml
src/: App.css  App.tsx  api.ts  constants.ts  main.tsx  types.ts  vite-env.d.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs  store.rs  timer.rs
src-tauri/src/platform/: mod.rs  windows.rs
src/components/: AcknowledgeCard.tsx  ControlsCard.tsx  SettingsCard.tsx  StatusCard.tsx
src/hooks/: useBackendEvents.ts  useCountdownPoll.ts  useFormConfig.ts  useRepeatSound.ts  useTheme.ts
src/utils/: audio.ts  format.ts  theme.ts
